# posggym

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  download_agents.sh  pyproject.toml  setup.py  tox.ini
.github/: test.yml
.github/workflows/: test.yml
docs/: .gitignore  README.md  README.rst  conf.py  environments.rst  index.md  requirements.txt
docs/_static/css/: envgrid.css
docs/agents/: agent_creation.md  continuous.md  generic.md  getting_started.md  grid_world.md
docs/agents/continuous/: driving_continuous.md  drone_team_capture.md  predator_prey_continuous.md  pursuit_evasion_continuous.md
docs/agents/grid_world/: cooperative_reaching.md  driving.md  driving_gen.md  level_based_foraging.md  predator_prey.md  pursuit_evasion.md
docs/api/: agents.md  env.md  model.md  wrappers.md
docs/api/agents/: action_distributions.md  policy.md  processors.md
docs/api/wrappers/: action_wrappers.md  misc_wrappers.md  observation_wrappers.md  petting_zoo.md  reward_wrappers.md  rllib.md
docs/environments/: classic.md  continuous.md  grid_world.md
docs/environments/classic/: list.html  multi_access_broadcast_channel.md  multi_agent_tiger.md  rock_paper_scissors.md
docs/environments/continuous/: driving_continuous.md  drone_team_capture.md  predator_prey_continuous.md  pursuit_evasion_continuous.md
docs/environments/grid_world/: cooperative_reaching.md  driving.md  driving_gen.md  level_based_foraging.md  list.html  predator_prey.md  pursuit_evasion.md  two_paths.md  u_a_v.md
docs/examples/: index.md
docs/intro/: getting_started.md  installation.md
docs/release_notes/: index.md
docs/scripts/: gen_agent_gifs.py  gen_agent_mds.py  gen_env_mds.py  gen_envs_display.py  gen_gifs.py  gen_imgs.py  gen_mds.py  utils.py
docs/statistics/: env_speed.md
docs/tutorials/: agent_creation.md  api_comparison.md  environment_creation.md
examples/: print_available_agents.py  record_video.py  run_agents.py  run_all_agents.py  run_keyboard_agent.py  run_random_agents.py
examples/custom_envs/: hurdle_race.py
notebooks/: analysis.ipynb  generate_payoffs_figs.py  pairwise_agent_comparison.ipynb  plot_utils.py
notebooks/results/: Driving-14x14RoundAbout-n2-v0.csv  Driving-7x7RoundAbout-n2-v0.csv  PredatorPrey-10x10-P2-p3-s2-coop-v0.csv  PredatorPrey-10x10-P3-p3-s2-coop-v0.csv  PredatorPrey-10x10-P4-p3-s3-coop-v0.csv  PursuitEvasion-16x16-v0.csv  PursuitEvasion-8x8-v0.csv
posggym/: __init__.py  config.py  core.py  error.py  logger.py  model.py
posggym/agents/: __init__.py  config.py  policy.py  random_policies.py  registration.py  rllib_policy.py  torch_policy.py
posggym/agents/diversity/: return_div.py
posggym/agents/evaluation/: __init__.py  diversity.py  exp.py  pairwise.py  render.py  runner.py  stats.py  writer.py
posggym/agents/rllib/: __init__.py  policy.py
posggym/agents/utils/: action_distributions.py  agent_env_wrapper.py  download.py  preprocessors.py  processors.py
posggym/agents/wrappers/: __init__.py  agent_env.py
posggym/envs/: __init__.py  registration.py
posggym/envs/classic/: __init__.py  mabc.py  rock_paper_scissors.py  tiger.py
posggym/envs/continous/: MultiAgentPursuitEvasion.py  core.py  predator_prey.py  render.py
posggym/envs/continuous/: MultiAgentPursuitEvasion.py  core.py  core2.py  driving.py  driving_continuous.py  drone_team_capture.py  predator_prey.py  predator_prey_continuous.py  pursuit_evasion.py  pursuit_evasion_continuous.py  render.py
posggym/envs/grid_world/: cooperative_reaching.py  core.py  driving.py  driving_gen.py  lbf.py  level_based_foraging.py  predator_prey.py  pursuit_evasion.py  render.py  two_paths.py  uav.py  utils.py  viewer.py
posggym/envs/highway_env/: __init__.py  core.py  env.py  model.py  scenarios.py
posggym/envs/lbf/: __init__.py  core.py  env.py  model.py
posggym/envs/traffic_junction/: __init__.py  env.py  model.py
posggym/envs/two_paths/: __init__.py  action.py  belief.py  grid.py  model.py  obs.py  state.py
posggym/policies/: core.py  random.py
posggym/utils/: __init__.py  env_checker.py  history.py  model_checker.py  passive_env_checker.py  seeding.py
posggym/vector/: __init__.py  sync_vector_env.py
posggym/wrappers/: __init__.py  discretize_actions.py  env_checker.py  flatten_observation.py  flatten_observations.py  order_enforcing.py  petting_zoo.py  record_env.py  record_episode_statistics.py  record_video.py  rescale_actions.py  rescale_observation.py  rescale_observations.py  rllib_env.py  rllib_multi_agent_env.py  stack.py  time_limit.py
posggym/wrappers/monitoring/: video_recorder.py
scripts/: measure_agent_diversity.py  pairwise_agent_comparison.py  print_available_agents.py  render_agents.py  run_agents.py  run_all_agents.py  run_keyboard_agent.py  run_random_agents.py  time_env.py
scripts/training/: continue_training.py  train_klr.py  train_sp.py
tests/: README.md  __init__.py  conftest.py  download_assets.py  run_keyboard_agent.py  run_random_agents.py  test_core.py  test_model.py  time_env.py
tests/agents/: helpers.py  test_agents.py  test_make.py  test_pprint_registry.py  test_register.py  test_rllib_policy.py  test_spec.py  test_torch_agents.py  test_torch_policy.py
tests/agents/rllib/: test_policy.py
tests/agents/utils/: test_agent_env_wrapper.py  test_download.py
tests/envs/: conftest.py  spec_list.py  test_action_dim_check.py  test_envs.py  test_make.py  test_models.py  test_pprint_registry.py  test_register.py  test_rendering.py  test_spec.py  utils.py  utils_envs.py  utils_models.py
tests/envs/continuous/: test_core.py  (+4 more)
tests/utils/: test_seeding.py
tests/vector/: test_sync_vector_env.py
tests/wrappers/: test_discretize_actions.py  test_flatten_observation.py  test_flatten_observations.py  test_order_enforcing.py  test_petting_zoo.py  test_record_episode_statistics.py  test_record_video.py  test_rescale_actions.py  test_rescale_observation.py  test_rescale_observations.py  test_rllib_multi_agent_env.py  test_stack.py  test_time_limit.py  test_video_recorder.py  utils.py
(+118 files in other folders)
