# Package ######################################################################

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "posggym"
description = "A standard API and diverse set of reference environments for reinforcement learning and planning in Partially Observable Stochastic Games (POSGs)."
readme = "README.md"
requires-python = ">= 3.8"
authors = [{ name = "Jonathon Schwartz", email = "jonathon.schwartz@anu.edu.au" }]
license = { text = "MIT License" }
keywords = ["reinforcement learning", "game", "RL", "AI", "planning", "posg"]
classifiers = [
	# change to `5 - Production/Stable` maybe one day
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
dependencies = [
	"gymnasium >=0.27",
    "numpy >=1.21.0",
    "typing-extensions >=4.3.0",
	"importlib-metadata >=4.8.0; python_version < '3.10'",
]
dynamic = ["version"]

[project.optional-dependencies]
# Update dependencies in `all` if any are added or removed
grid-world = ["matplotlib >=3.5", "pygame ==2.1.3.dev8"]
all = [
	# All dependencies above
	# NOTE: No need to manually remove the duplicates, setuptools automatically does that.
	# grid-world
	"matplotlib >=3.5",
	"pygame==2.1.3.dev8"
]
testing = ["pytest >=7.2"]

[project.urls]
Homepage = "https://github.com/RDLLab/posggym"
Repository = "https://github.com/RDLLab/posggym/"
# TODO
# Documentation = "https://gymnasium.farama.org"
"Bug Report" = "https://github.com/RDLLab/posggym/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["posggym", "posggym.*"]

[tool.setuptools.package-data]
posggym = [
	"envs/grid_world/img/*.png",
    "py.typed",
]

# Linters and Test tools #######################################################
[tool.black]
safe = true
line-length = 88

[tool.isort]
atomic = true
profile = "black"
src_paths = ["posggym", "tests"]
extra_standard_library = ["typing_extensions"]
indent = 4
lines_after_imports = 2
multi_line_output = 3

# [tool.pylsp-mypy]
# enabled = true
# live_mode = true
# strict = false