# Package ######################################################################

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "posggym"
description = "A standard API and diverse set of reference environments for reinforcement learning and planning in Partially Observable Stochastic Games (POSGs)."
readme = "README.md"
requires-python = ">= 3.8"
authors = [{ name = "Jonathon Schwartz", email = "jonathon.schwartz@anu.edu.au" }]
license = { text = "MIT License" }
keywords = ["reinforcement learning", "game", "RL", "AI", "planning", "posg"]
classifiers = [
	# change to `5 - Production/Stable` maybe one day
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
dependencies = [
	"gymnasium >=0.26",
    "numpy >=1.21.0",
    "typing-extensions >=4.3.0",
	"importlib-metadata >=4.8.0; python_version < '3.10'",
]
dynamic = ["version"]

[project.optional-dependencies]
# Update dependencies in `all` if any are added or removed
grid-world = ["pygame >=2.0"]
continuous = ["pygame >=2.0"]
all = [
	# Dependencies for all environment types above
	# NOTE: No need to manually remove the duplicates, setuptools automatically does that.
	# grid-world
	"pygame >=2.0",
	# continuous
	"pygame >=2.0",
]
pettingzoo = ["pettingzoo >=1.22"]
rllib = ["ray[rllib]>=2.3"]
testing = ["pytest >=7.2"]

[project.urls]
Homepage = "https://github.com/RDLLab/posggym"
Repository = "https://github.com/RDLLab/posggym/"
Documentation = "https://posggym.readthedocs.io/"
"Bug Report" = "https://github.com/RDLLab/posggym/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["posggym", "posggym.*"]

[tool.setuptools.package-data]
posggym = [
	"envs/grid_world/img/*.png",
    "py.typed",
]

# Linters and Test tools #######################################################
[tool.ruff]
# https://beta.ruff.rs/docs/settings/
src = ["posggym", "tests"]
extend-select = ["C4", "SIM", "TCH"]
show-fixes = true
# Same as Black.
line-length = 88
# Assume Python 3.8.
target-version = "py38"

# Ignore `F401` (import violations) in all `__init__.py` files,
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.isort]
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2

[tool.black]
safe = true
line-length = 88

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = false
